force-app/main/modules/setup/objects/Datasource_Per_Country__mdt/Datasource_Per_Country__mdt.object-meta.xml
<CustomObject>
    <description>Join object to join the data source CMDT with the ISO 3166 CMDT. Used to select the data source for a country for organisation searches</description>
    <label>Data source Per Country</label>
    <pluralLabel>Data source Per Countries</pluralLabel>
</CustomObject>