force-app/main/modules/setup/objects/Datasource_Per_Country__mdt/fields/Data_source__c.field-meta.xml
<CustomField>
    <fullName>Data_source__c</fullName>
    <description>The data source that can be used to search for organisations for this country</description>
    <inlineHelpText>The data source that can be used to search for organisations for this country</inlineHelpText>
    <label>Data source</label>
    <referenceTo>Data_source__mdt</referenceTo>
    <relationshipLabel>Data source Per Countries</relationshipLabel>
    <relationshipName>Data_source_Per_Countries</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>