force-app/main/modules/setup/objects/Datasource_Per_Country__mdt/fields/Data_source_editable__c.field-meta.xml
<CustomField>
    <fullName>Data_source_editable__c</fullName>
    <description>Created to enable subscriber to edit the field</description>
    <label>Data source</label>
    <referenceTo>Data_source__mdt</referenceTo>
    <relationshipLabel>Data source Per Countries (Data source editable)</relationshipLabel>
    <relationshipName>Data_source_Per_Countries2</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>