force-app/main/modules/setup/objects/Datasource_Per_Country__mdt/fields/Data_Source_Select_Record__c.field-meta.xml
<CustomField>
    <fullName>Data_Source_Select_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if this is the record that determines the selected data source for the country. There should only be one record per country with value true.</description>
    <inlineHelpText>True if this is the record that determines the selected data source for the country. There should only be one record per country with value true.</inlineHelpText>
    <label>Data source Select Record</label>
    <type>Checkbox</type>
</CustomField>