force-app/main/modules/setup/objects/Datasource_Per_Country__mdt/fields/Datasource__c.field-meta.xml
<CustomField>
    <fullName>Datasource__c</fullName>
    <label>Datasource</label>
    <referenceTo>Data_source__mdt</referenceTo>
    <relationshipLabel>Data source Per Countries (Datasource)</relationshipLabel>
    <relationshipName>Data_source_Per_Countries1</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>