force-app/main/modules/setup/objects/Datasource_Per_Country__mdt/fields/ISO_3166_Entry__c.field-meta.xml
<CustomField>
    <fullName>ISO_3166_Entry__c</fullName>
    <description>The country (as ISO3166 code) for which the given data source can be selected</description>
    <inlineHelpText>The country (as ISO3166 code) for which the given data source can be selected</inlineHelpText>
    <label>ISO 3166 Entry</label>
    <referenceTo>ISO_3166_Entry__mdt</referenceTo>
    <relationshipLabel>Data source Per Countries</relationshipLabel>
    <relationshipName>Data_source_Per_Countries</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>