force-app/main/modules/setup/objects/Datasource_Per_Country__mdt/validationRules/Data_source_selected_records_public.validationRule-meta.xml
<ValidationRule>
    <fullName>Data_source_selected_records_public</fullName>
    <active>true</active>
    <description>Checks if the record is public whenever the data source selected field is true</description>
    <errorConditionFormula>Data_Source_Select_Record__c &amp;&amp; IsProtected</errorConditionFormula>
    <errorMessage>A record that determines which data source is selected for the country should always be public. Please change to public or deselect the Data Source Selected field</errorMessage>
</ValidationRule>